# designate

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .travis.yml  .zuul.yaml  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  TODO.md  bandit.yaml  concourse_unit_test_task  create_requirements.py  custom-requirements.txt  designate.sublime-project  lower-constraints.txt  moniker.sublime-project  openstack-common.conf  pyproject.toml  rackspace-requirements.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tests-py3.txt  tox.ini
api-ref/source/: conf.py  dns-api-v2-blacklist.inc  dns-api-v2-index.rst  dns-api-v2-limits.inc  dns-api-v2-pool.inc  dns-api-v2-quota.inc  dns-api-v2-recordset.inc  dns-api-v2-reverse-floatingips.inc  dns-api-v2-service-status.inc  dns-api-v2-shared-zones.inc  dns-api-v2-tld.inc  dns-api-v2-tsigkey.inc  dns-api-v2-version.inc  dns-api-v2-zone-export.inc  dns-api-v2-zone-import.inc  dns-api-v2-zone-ownership-transfer-accept.inc  dns-api-v2-zone-ownership-transfer-request.inc  dns-api-v2-zone-tasks.inc  dns-api-v2-zone.inc  index.rst  parameters.yaml  params.yaml  status.yaml
contrib/: consume.py  dns_dump_dnspy.py  dns_dump_hex_to_text.py  dns_dump_raw.py  dns_dump_server.py  fixleadingzeros.py  ipaextractor.py  pmdomain.py  records_mass_create.py  zoneextractor.py
contrib/designate-dashboard/: CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  openstack-common.conf  requirements.txt  setup.cfg  test  test-requirements.txt  tox.ini
contrib/designate-dashboard/designatedashboard/: __init__.py  exceptions.py
contrib/designate-dashboard/designatedashboard/api/: __init__.py  designate.py
contrib/designate-dashboard/designatedashboard/dashboards/project/dns_domains/: forms.py  panel.py  tables.py  tests.py  urls.py  views.py
contrib/designate-dashboard/designatedashboard/dashboards/project/dns_domains/templates/dns_domains/: _create_domain.html  _create_record.html  _domain_detail.html  _record_detail.html  _update_domain.html  _update_record.html  create_domain.html  create_record.html  domain_detail.html  index.html  record_detail.html  records.html  update_domain.html  update_record.html
contrib/designate-dashboard/designatedashboard/enabled/: _71_dns_project.py
contrib/designate-dashboard/designatedashboard/tests/: .secret_key_store  settings.py  test_designatedashboard.py
contrib/designate-dashboard/doc/source/: conf.py  index.rst  installation.rst  usage.rst
contrib/designate-dashboard/enabled/: _71_dns_project.py
contrib/designate-ext-samplehandler/: .gitignore  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt
contrib/designate-ext-samplehandler/designate_ext_samplehandler/: version.py
contrib/designate-ext-samplehandler/designate_ext_samplehandler/notification_handler/: sample.py
contrib/devstack/: Vagrantfile  gate_hook.sh  install.sh  localrc  post_test_hook.sh  pre_test_hook.sh  run_tempest_tests.sh
contrib/djbdns/: tinydns.init  tinydns.service
contrib/tempest/: README.rst  clients.py  config.py  tempest.conf.sample
contrib/vagrant/: README.rst  Vagrantfile  local.conf  localrc  setup_ubuntu_devstack
debian/: control  rules
designate/: __init__.py  context.py  coordination.py  debug.py  dnsmiddleware.py  dnsutils.py  exceptions.py  heartbeat_emitter.py  hookpoints.py  i18n.py  loggingutils.py  metrics.py  notifications.py  notifier.py  opts.py  plugin.py  policy.py  rpc.py  schema.py  service.py  service_status.py  utils.py  version.py  wsgi.py
designate/agent/: __init__.py  axfr.py  handler.py  middleware.py  rpcapi.py  service.py
designate/api/: __init__.py  auth.py  middleware.py  service.py  versions.py  wsgi.py
designate/backend/: __init__.py  agent.py  base.py  impl_akamai.py  impl_akamai_v2.py  impl_bind9.py  impl_bind9_pool.py  impl_designate.py  impl_dnsmasq.py  impl_dynect.py  impl_f5.py  impl_fake.py  impl_infoblox.py  impl_multi.py  impl_mysqlbind9.py  impl_ns1.py  impl_nsd4.py  impl_nsd4slave.py  impl_pdns4.py  impl_pool_manager_proxy.py  impl_rpc.py  private_codes.py
designate/central/: __init__.py  effectivetld.py  rpcapi.py  service.py
designate/cmd/: __init__.py  agent.py  api.py  central.py  manage.py  mdns.py  pool_manager.py  producer.py  sink.py  status.py  worker.py  zone_manager.py
designate/common/: config.py  constants.py  keystone.py  memorycache.py  profiler.py
designate/conf/: __init__.py  agent.py  akamai.py  api.py  base.py  bind9.py  central.py  coordination.py  denominator.py  djbdns.py  dynect.py  gdnsd.py  heartbeat_emitter.py  infoblox.py  keystone.py  knot2.py  mdns.py  metrics.py  msdns.py  network_api.py  opts.py  pool_manager.py  producer.py  proxy.py  service_status.py  sink.py  storage.py  worker.py
designate/hacking/: checks.py
designate/locale/: designate-log-critical.pot  designate-log-error.pot  designate-log-info.pot  designate-log-warning.pot  designate.pot
designate/manage/: __init__.py  akamai.py  base.py  database.py  pool.py  pool_manager_cache.py  powerdns.py  powerdns_mdns.py  service.py  tlds.py
devstack/: README.rst  exercise.sh  networking_test.py  networking_test_monitor_tc.sh  plugin.sh  settings  statsd_mock_server.py
doc/: requirements.txt
etc/: moniker-agent-bind9.conf  moniker-agent-bind9.conf.sample  moniker-agent.conf.sample  moniker-api-paste.ini.sample  moniker-api.conf  moniker-api.conf.sample  moniker-central.conf  moniker-central.conf.sample  moniker.conf.sample  policy.json
functionaltests/: .testr.conf  __init__.py
moniker/: __init__.py  context.py  debug.py  exceptions.py  plugin.py  policy.py  schema.py  schemas.py  utils.py  version.py  wsgi.py
rally-jobs/: README.rst  designate-designate.yaml
rally-scenarios/: README.rst
templates/: bind9-zone.jinja2
tools/: designate-keystone-setup  install_venv.py  install_venv_common.py  moniker-keystone-setup  patch_tox_venv.py  pip-options  pip-requires  pretty_flake8.py  pretty_flake8.sh  setup-requires  test-requires  tox_install.sh
zuul.d/: jobs.yaml  projects.yaml
(+1774 files in other folders)
