[metadata]
name = designate
summary = DNS as a Service
description-file =
    README.rst
author = Kiall Mac Innes
author-email = kiall@managedit.ie
home-page = https://launchpad.net/designate
classifier =
    Environment :: OpenStack
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: Internet :: Name Service (DNS)

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    designate
data_files =
    etc/designate =
        etc/designate/api-paste.ini
        etc/designate/policy.json
        etc/designate/designate.conf.sample
        etc/designate/rootwrap.conf.sample
    etc/designate/rootwrap.d =
        etc/designate/rootwrap.d/bind9.filters

[entry_points]
console_scripts =
    designate-rootwrap = oslo_rootwrap.cmd:main
    designate-api = designate.cmd.api:main
    designate-central = designate.cmd.central:main
    designate-manage = designate.cmd.manage:main
    designate-mdns = designate.cmd.mdns:main
    designate-pool-manager = designate.cmd.pool_manager:main
    designate-zone-manager = designate.cmd.zone_manager:main
    designate-sink = designate.cmd.sink:main
    designate-agent = designate.cmd.agent:main

designate.api.v1 =
    domains = designate.api.v1.domains:blueprint
    limits = designate.api.v1.limits:blueprint
    records = designate.api.v1.records:blueprint
    servers = designate.api.v1.servers:blueprint
    tsigkeys = designate.api.v1.tsigkeys:blueprint

designate.api.v1.extensions =
    diagnostics = designate.api.v1.extensions.diagnostics:blueprint
    quotas = designate.api.v1.extensions.quotas:blueprint
    sync = designate.api.v1.extensions.sync:blueprint
    reports = designate.api.v1.extensions.reports:blueprint
    touch = designate.api.v1.extensions.touch:blueprint

designate.api.admin.extensions =
    reports = designate.api.admin.controllers.extensions.reports:ReportsController
    quotas = designate.api.admin.controllers.extensions.quotas:QuotasController
    zones = designate.api.admin.controllers.extensions.zones:ZonesController
    target_sync = designate.api.admin.controllers.extensions.target_sync:TargetSyncController

designate.storage =
    sqlalchemy = designate.storage.impl_sqlalchemy:SQLAlchemyStorage

designate.pool_manager.cache =
    memcache = designate.pool_manager.cache.impl_memcache:MemcachePoolManagerCache
    noop = designate.pool_manager.cache.impl_noop:NoopPoolManagerCache
    sqlalchemy = designate.pool_manager.cache.impl_sqlalchemy:SQLAlchemyPoolManagerCache

designate.notification.handler =
    nova_fixed = designate.notification_handler.nova:NovaFixedHandler
    neutron_floatingip = designate.notification_handler.neutron:NeutronFloatingHandler

designate.backend =
    bind9 = designate.backend.impl_bind9:Bind9Backend
    designate = designate.backend.impl_designate:DesignateBackend
    powerdns = designate.backend.impl_powerdns:PowerDNSBackend
    dynect = designate.backend.impl_dynect:DynECTBackend
    akamai = designate.backend.impl_akamai:AkamaiBackend
    nsd4 = designate.backend.impl_nsd4:NSD4Backend
    infoblox = designate.backend.impl_infoblox:InfobloxBackend
    fake = designate.backend.impl_fake:FakeBackend
    agent = designate.backend.agent:AgentPoolBackend

designate.backend.agent_backend =
    bind9 = designate.backend.agent_backend.impl_bind9:Bind9Backend
    knot2 = designate.backend.agent_backend.impl_knot2:Knot2Backend
    djbdns = designate.backend.agent_backend.impl_djbdns:DjbdnsBackend
    denominator = designate.backend.agent_backend.impl_denominator:DenominatorBackend
    fake = designate.backend.agent_backend.impl_fake:FakeBackend

designate.network_api =
    fake = designate.network_api.fake:FakeNetworkAPI
    neutron = designate.network_api.neutron:NeutronNetworkAPI

designate.quota =
    noop =  designate.quota.impl_noop:NoopQuota
    storage = designate.quota.impl_storage:StorageQuota

designate.scheduler.filters =
    fallback = designate.scheduler.filters.fallback_filter:FallbackFilter
    attribute = designate.scheduler.filters.attribute_filter:AttributeFilter
    random = designate.scheduler.filters.random_filter:RandomFilter
    pool_id_attribute = designate.scheduler.filters.pool_id_attribute_filter:PoolIDAttributeFilter
    default_pool = designate.scheduler.filters.default_pool_filter:DefaultPoolFilter

designate.manage =
    database = designate.manage.database:DatabaseCommands
    akamai = designate.manage.akamai:AkamaiCommands
    pool = designate.manage.pool:PoolCommands
    pool-manager-cache = designate.manage.pool_manager_cache:DatabaseCommands
    powerdns = designate.manage.powerdns:DatabaseCommands
    tlds = designate.manage.tlds:TLDCommands

designate.zone_manager_tasks =
    zone_purge = designate.zone_manager.tasks:DeletedZonePurgeTask
    periodic_exists = designate.zone_manager.tasks:PeriodicExistsTask
    periodic_secondary_refresh = designate.zone_manager.tasks:PeriodicSecondaryRefreshTask
    delayed_notify = designate.zone_manager.tasks:PeriodicGenerateDelayedNotifyTask

designate.heartbeat_emitter =
  noop = designate.service_status:NoopEmitter
  rpc = designate.service_status:RpcEmitter


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = designate/locale
domain = designate

[update_catalog]
domain = designate
output_dir = designate/locale
input_file = designate/locale/designate.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = designate/locale/designate.pot

[wheel]
universal = 1
