[metadata]
name = designate-ext-samplehandler
summary = Sample Designate Handler Extension
description_file =
    README.rst
author = Kiall Mac Innes
author_email = kiall@hp.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = designate_ext_samplehandler

[entry_points]
designate.notification.handler =
    sample = designate_ext_samplehandler.notification_handler.sample:SampleHandler

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = designate-ext-samplehandler/locale
domain = designate-ext-samplehandler

[update_catalog]
domain = designate-ext-samplehandler
output_dir = designate-ext-samplehandler/locale
input_file = designate-ext-samplehandler/locale/designate-ext-samplehandler.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = designate-ext-samplehandler/locale/designate-ext-samplehandler.pot
